--- a/src/styles/sections/_projects.scss
+++ b/src/styles/sections/_projects.scss
@@ -58,7 +58,8 @@
             position: absolute;
             width: 100%;
             height: 100%;
-            background-color: #9d00ff4d;
+            // background-color: #9d00ff4d;
+            background-color: #69f0ae4d;
           }
           img {
             z-index: 0;
