--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,14 +1,24 @@
 :root {
     
+  // --navy-shadow: rgba(2, 12, 27, 0.7);
+  // --background-color: #0a192f;
+  // --lightest-navy: #233554;
+  // --light-navy: #112240;
+  // --dark-slate: #495670;
+  // --slate: #8892b0;
+  // --light-slate: #ccd6f6;
+  // --lightest-slate: #a8b2d1;
+  // --theme-color: #9d00ff;
+
   --navy-shadow: rgba(2, 12, 27, 0.7);
   --background-color: #0a192f;
   --lightest-navy: #233554;
   --light-navy: #112240;
-  --dark-slate: #495670;
-  --slate: #8892b0;
-  --light-slate: #ccd6f6;
-  --lightest-slate: #a8b2d1;
-  --theme-color: #9d00ff;
+  --dark-slate: #4c5c68;
+  --slate: #77a0b7;
+  --light-slate: #c2d9e2;
+  --lightest-slate: #e8f1f2;
+  --theme-color: #69f0ae;
 
     --tsm: 13px;
     --tsm1: 14px;
