--- a/src/styles/sections/_about.scss
+++ b/src/styles/sections/_about.scss
@@ -88,7 +88,7 @@
           position: absolute;
           height: 350px;
           width: 350px;
-          background-color: #9d00ff4d;
+          background-color: #69f0ae4d;
           border-radius: 0.2rem;
         }
         .overlay-border {
@@ -109,7 +109,7 @@
           object-fit: cover;
           img {
             z-index: 0;
-            filter: grayscale(100%);
+            // filter: grayscale(100%);
             transition: 0.3s ease-in-out;
             border-radius: 0.2rem;
           }
